tests/snapshots/conformance__n_structure_open_object_open_string.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{"a
stdout --- 
<empty>
stderr --- 
error: expected quote before end of input
 --> stdin:1:3
  |
1 | {"a
  |   ^
